--- a/PRAKTIKUM02/Soft/Praktikum02/Praktikum02.MovieApp/appsettings.json
+++ b/PRAKTIKUM02/Soft/Praktikum02/Praktikum02.MovieApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MovieContext": "Data Source=movies.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
